--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
     "MD033": false,
     "MD045": false,
     "MD036": false,
-    "MD042": false
+    "MD042": false,
+    "MD001": false,
+    "MD024": false
   },
   "cSpell.words": ["srcset"]
 }
